[package]
name = "wasmer-chimera"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

[dependencies]
wasmer-runtime-core = { path = "../runtime-core", version = "0.2.1" }
rayon = "1.0"
lazy_static = "1"
parking_lot = "0.7.1"
wasmparser = "0.29.2"
hashbrown = "0.1.8"
# cranelift-codegen is using target-lexicon 0.2.0.
target-lexicon = "0.2.0"

# For cranelift
cranelift-native = "0.29.0"
cranelift-codegen = "0.29.0"
cranelift-entity = "0.29.0"
cranelift-wasm = "0.29.0"