[package]
name = "wasmer-compiler-cli"
description = "Wasmer Compiler CLI"
categories = ["wasm", "command-line-interface"]
keywords = ["wasm", "webassembly", "cli"]
readme = "README.md"
default-run = "wasmer-compiler"
build = "build.rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "wasmer-compiler"
path = "src/bin/wasmer_compiler.rs"
doc = false

[dependencies]
wasmer-compiler = { version = "=4.3.0-alpha.1", path = "../compiler", features = ["compiler"] }
wasmer-types = { version = "=4.3.0-alpha.1", path = "../types" }
is-terminal = "0.4.7"
colored = "2.0"
anyhow = "1.0"
# For the function names autosuggestion
distance = "0.4"
# For the inspect subcommand
bytesize = "1.0"
cfg-if = "1.0"
# For debug feature
fern = { version = "0.6", features = ["colored"], optional = true }
log = { version = "0.4", optional = true }
target-lexicon = { version = "0.12", features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer-compiler-singlepass = { version = "=4.3.0-alpha.1", path = "../compiler-singlepass", optional = true }
wasmer-compiler-cranelift = { version = "=4.3.0-alpha.1", path = "../compiler-cranelift", optional = true }
clap = { version = "4.3.0-alpha.1", features = ["derive", "env"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer-compiler-singlepass = { version = "=4.3.0-alpha.1", path = "../compiler-singlepass", optional = true, default-features = false, features = ["wasm"] }
wasmer-compiler-cranelift = { version = "=4.3.0-alpha.1", path = "../compiler-cranelift", optional = true, default-features = false, features = ["wasm"] }
# NOTE: Must use different features for clap because the "color" feature does not
# work on wasi, due to the anstream dependency not compiling.
clap = { version = "4.3.0-alpha.1", default-features = false, features = [
  "std",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "env",
]}

[target.'cfg(target_os = "linux")'.dependencies]
unix_mode = "0.1.3"

[features]
# Don't add the compiler features in default, please add them on the Makefile
# since we might want to autoconfigure them depending on the availability on the host.
default = []
engine = []
compiler = [
    "wasmer-compiler/translator",
    "wasmer-compiler/compiler",
]
singlepass = [
    "wasmer-compiler-singlepass",
    "compiler",
]
cranelift = [
    "wasmer-compiler-cranelift",
    "compiler",
]
debug = ["fern", "log"]
disable-all-logging = []
jit = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
