[package]
name = "wasmer-compiler-cli"
description = "Wasmer Compiler CLI"
categories = ["wasm", "command-line-interface"]
keywords = ["wasm", "webassembly", "cli"]
readme = "README.md"
default-run = "wasmer-compiler"
build = "build.rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "wasmer-compiler"
path = "src/bin/wasmer_compiler.rs"
doc = false

[dependencies]
wasmer-compiler = { version = "=6.1.0-rc.1", path = "../compiler", features = [
	"compiler",
] }
wasmer-types = { version = "=6.1.0-rc.1", path = "../types", features = ["detect-wasm-features"] }
is-terminal = "0.4.7"
colored = "2.0"
anyhow.workspace = true
# For the function names autosuggestion
distance = "0.4"
# For the inspect subcommand
bytesize = "1.0"
cfg-if.workspace = true
# For debug feature
fern = { version = "0.6", features = ["colored"], optional = true }
log = { workspace = true, optional = true }
target-lexicon = { workspace = true, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer-compiler-singlepass = { version = "=6.1.0-rc.1", path = "../compiler-singlepass", optional = true }
wasmer-compiler-cranelift = { version = "=6.1.0-rc.1", path = "../compiler-cranelift", optional = true }
wasmer-compiler-llvm = { version = "=6.1.0-rc.1", path = "../compiler-llvm", optional = true }
clap = { version = "4.4.0", features = ["derive", "env"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer-compiler-singlepass = { version = "=6.1.0-rc.1", path = "../compiler-singlepass", optional = true, default-features = false, features = [
	"wasm",
] }
wasmer-compiler-cranelift = { version = "=6.1.0-rc.1", path = "../compiler-cranelift", optional = true, default-features = false, features = [
	"wasm",
] }
wasmer-compiler-llvm = { version = "=6.1.0-rc.1", path = "../compiler-llvm",  optional = true, default-features = false, features = [] }
# NOTE: Must use different features for clap because the "color" feature does not
# work on wasi, due to the anstream dependency not compiling.
clap = { version = "4.4.0", default-features = false, features = [
	"std",
	"help",
	"usage",
	"error-context",
	"suggestions",
	"derive",
	"env",
] }

[target.'cfg(target_os = "linux")'.dependencies]
unix_mode = "0.1.3"

[features]
# Don't add the compiler features in default, please add them on the Makefile
# since we might want to autoconfigure them depending on the availability on the host.
default = []
engine = []
compiler = ["wasmer-compiler/translator", "wasmer-compiler/compiler"]
singlepass = ["wasmer-compiler-singlepass", "compiler"]
cranelift = ["wasmer-compiler-cranelift", "compiler"]
debug = ["fern", "log"]
disable-all-logging = []
jit = []
llvm = ["wasmer-compiler-llvm"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
