[package]
name = "wasmer-clif-backend-windows"
version = "0.0.1"
description = "Wasmer runtime Cranelift compiler backend for Windows"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
edition = "2018"

[target.'cfg(windows)'.dependencies]
wasmer-runtime-core = { path = "../runtime-core", version = "0.1.2" }
winapi = { version = "0.3", features = ["winbase", "errhandlingapi", "minwindef", "minwinbase", "winnt"] }
libc = "0.2.48"

[build-dependencies]
cmake = "0.1.35"
bindgen = "0.46.0"
regex = "1.0.6"
