[package]
name = "wasmer-clif-backend"
version = "0.8.0"
description = "Wasmer runtime Cranelift compiler backend"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
edition = "2018"
readme = "README.md"

[dependencies]
wasmer-runtime-core = { path = "../runtime-core", version = "0.8.0" }
cranelift-native = "0.44.0"
cranelift-codegen = "0.44.0"
cranelift-entity = "0.44.0"
cranelift-frontend = { package = "wasmer-clif-fork-frontend", version = "0.44.0" }
cranelift-wasm = { package = "wasmer-clif-fork-wasm", version = "0.44.0" }
target-lexicon = "0.8.1"
wasmparser = "0.39.1"
byteorder = "1.3.2"
nix = "0.15.0"
libc = "0.2.60"
rayon = "1.1"

# Dependencies for caching.
[dependencies.serde]
version = "1.0"
features = ["rc"]
[dependencies.serde_derive]
version = "1.0"
[dependencies.serde_bytes]
version = "0.11"
[dependencies.serde-bench]
version = "0.0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "minwindef", "minwinbase", "winnt"] }
wasmer-win-exception-handler = { path = "../win-exception-handler", version = "0.8.0" }

[features]
debug = ["wasmer-runtime-core/debug"]
