[package]
name = "wasmer-clif-backend"
version = "0.12.0"
description = "Wasmer runtime Cranelift compiler backend"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
keywords = ["wasm", "webassembly", "compiler", "JIT", "AOT"]
categories = ["wasm"]
edition = "2018"
readme = "README.md"

[dependencies]
wasmer-runtime-core = { path = "../runtime-core", version = "0.12.0" }
cranelift-native = { git = "https://github.com/wasmerio/cranelift", branch = "wasmer" }
cranelift-codegen = { git = "https://github.com/wasmerio/cranelift", branch = "wasmer" }
cranelift-entity = { git = "https://github.com/wasmerio/cranelift", branch = "wasmer" }
cranelift-frontend = { git = "https://github.com/wasmerio/cranelift", branch = "wasmer" }
cranelift-wasm = { git = "https://github.com/wasmerio/cranelift", branch = "wasmer" }
target-lexicon = "0.9"
wasmparser = "0.45.0"
byteorder = "1.3.2"
nix = "0.15.0"
libc = "0.2.60"
rayon = "1.1"

# Dependencies for caching.
[dependencies.serde]
version = "1.0"
features = ["rc"]
[dependencies.serde_derive]
version = "1.0"
[dependencies.serde_bytes]
version = "0.11"
[dependencies.serde-bench]
version = "0.0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "minwindef", "minwinbase", "winnt"] }
wasmer-win-exception-handler = { path = "../win-exception-handler", version = "0.12.0" }

[features]
debug = ["wasmer-runtime-core/debug"]
