[package]
name = "wasmer-compiler-cranelift"
description = "Cranelift compiler for Wasmer WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "compiler", "cranelift"]
documentation = "https://docs.rs/wasmer-compiler-cranelift/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-compiler = { path = "../compiler", version = "=7.0.0-alpha.1", default-features = false, features = [
	"translator",
	"compiler",
] }
wasmer-types = { path = "../types", version = "=7.0.0-alpha.1", default-features = false, features = [
	"std",
] }

cranelift-entity.workspace = true
cranelift-codegen = { workspace = true, features = [
	"x86",
	"arm64",
	"riscv64",
] }
cranelift-frontend.workspace = true

itertools.workspace = true
tracing.workspace = true
hashbrown = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
more-asserts.workspace = true
gimli = { workspace = true, optional = true }
smallvec.workspace = true
target-lexicon.workspace = true
leb128.workspace = true
indexmap.workspace = true

[dev-dependencies]
cranelift-codegen = { workspace = true, features = ["all-arch"] }

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "unwind", "rayon"]
wasm = ["std", "unwind"]
unwind = ["cranelift-codegen/unwind", "gimli"]
std = [
	"cranelift-codegen/std",
	"cranelift-frontend/std",
	"wasmer-compiler/std",
	"wasmer-types/std",
]
core = ["hashbrown", "cranelift-codegen/core", "cranelift-frontend/core"]
enable-serde = []

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
