[package]
name = "wasmer-compiler-cranelift"
description = "Cranelift compiler for Wasmer WebAssembly runtime"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "compiler", "cranelift"]
documentation = "https://docs.rs/wasmer-compiler-cranelift/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-compiler = { path = "../compiler", version = "=7.2.1", default-features = false, features = [
  "translator",
  "compiler",
] }
wasmer-types = { path = "../types", version = "=7.2.1", default-features = false, features = [
  "std",
] }

cranelift-entity.workspace = true
cranelift-codegen = { workspace = true, features = ["x86", "arm64", "riscv64"] }
cranelift-frontend.workspace = true

itertools.workspace = true
tracing.workspace = true
hashbrown = { workspace = true, optional = true }
rayon.workspace = true
more-asserts.workspace = true
smallvec.workspace = true
target-lexicon.workspace = true
leb128.workspace = true
indexmap.workspace = true
regalloc2.workspace = true
serde_derive = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, features = [
  "derive",
], optional = true }

[dev-dependencies]
cranelift-codegen = { workspace = true, features = ["all-arch"] }

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "unwind"]
wasm = ["std", "unwind"]
unwind = ["cranelift-codegen/unwind"]
std = [
  "cranelift-codegen/std",
  "cranelift-frontend/std",
  "wasmer-compiler/std",
  "wasmer-types/std",
]
core = ["hashbrown", "cranelift-codegen/core", "cranelift-frontend/core"]
enable-serde = ["cranelift-codegen/enable-serde", "serde", "serde_derive"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
